_audit/Nitrogen-Surplus-restructuring/outputs/run_logs/trade.log
/Users/udit/Documents/Shekhar_Nature/revision_2/_audit/Nitrogen-Surplus-restructuring/repro/legacy_notebook_runner.py:80: Pandas4Warning: The 'mode.copy_on_write' option is deprecated. Copy-on-Write can no longer be disabled (it is always enabled with pandas >= 3.0), and setting the option has no impact. This option will be removed in pandas 4.0.
  pd.options.mode.copy_on_write = False
Traceback (most recent call last):
  File "/Users/udit/Documents/Shekhar_Nature/revision_2/_audit/Nitrogen-Surplus-restructuring/repro/legacy_notebook_runner.py", line 108, in execute_notebook
    exec(compile(rewritten, f"{config.notebook.name}:cell_{idx}", "exec"), namespace, namespace)
         ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "trade.ipynb:cell_15", line 2
    'ragi': 321,
IndentationError: unexpected indent

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/udit/Documents/Shekhar_Nature/revision_2/_audit/Nitrogen-Surplus-restructuring/repro/legacy_notebook_runner.py", line 148, in main
    execute_notebook(config)
    ~~~~~~~~~~~~~~~~^^^^^^^^
  File "/Users/udit/Documents/Shekhar_Nature/revision_2/_audit/Nitrogen-Surplus-restructuring/repro/legacy_notebook_runner.py", line 111, in execute_notebook
    raise RuntimeError(
    ...<3 lines>...
    ) from exc
RuntimeError: Notebook execution failed in trade.ipynb at code cell 15.
First lines:
#converting it in terms of calorie per 100 gm 
    'ragi': 321,
    'bajra': 348,
    'rice': 356,
    'jowar': 334,
    'wheat': 322,
    'maize': 342
Original error: unexpected indent (trade.ipynb:cell_15, line 2)
